B&L QA/objects/Sample_Product__c.object
<CustomObject>
    <description>Lists of sample products. Originally created for DAS PH, now in use by EMEA SU.</description>
    <fields>
        <fullName>Other_Non_Listed_Samples__c</fullName>
        <description>Allows the sales rep to request a product sample if it isn&apos;t included in the picklists. Used by EMEA SU.</description>
        <label>Other Non-Listed Samples</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>List of Surgical Level 4 Product Groups for Sampling. Used by EMEA SU.</description>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accommodating IOL</fullName>
                </value>
                <value>
                    <fullName>Acrylic IOL</fullName>
                </value>
                <value>
                    <fullName>Anterior Accessories</fullName>
                </value>
                <value>
                    <fullName>Anterior Disposables</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters</fullName>
                </value>
                <value>
                    <fullName>Other Cataract</fullName>
                </value>
                <value>
                    <fullName>Posterior Disposables</fullName>
                </value>
                <value>
                    <fullName>Posterior Other</fullName>
                </value>
                <value>
                    <fullName>Silicone IOL</fullName>
                </value>
                <value>
                    <fullName>SOLTA</fullName>
                </value>
                <value>
                    <fullName>Viscoelastic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Quantity Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>SKUs for surgical sampling. Used by EMEA SU.</description>
        <label>SKU</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Product_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AT50AO-1700</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1750</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1800</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1825</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1850</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1875</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1900</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1925</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1950</fullName>
                </value>
                <value>
                    <fullName>AT50AO-1975</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2000</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2025</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2050</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2075</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2100</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2125</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2150</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2175</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2200</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2250</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2300</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2350</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2400</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2450</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2500</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2550</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2600</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2650</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2700</fullName>
                </value>
                <value>
                    <fullName>AT50AO-2750</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Request__c</fullName>
        <description>Reference to the Sample Request this product sample was created under. Used by EMEA SU.</description>
        <label>Sample Request</label>
        <referenceTo>Sample_Request__c</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Group__c</fullName>
        <description>List of level 5 product groups for surgical sampling. Used by EMEA SU.</description>
        <label>Sub Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Group__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>20G Combined Procedure Pack</fullName>
                </value>
                <value>
                    <fullName>20G Combined Proc Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>20G Posterior Pack</fullName>
                </value>
                <value>
                    <fullName>20G Posterior Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>23G Combined Procedure Pack</fullName>
                </value>
                <value>
                    <fullName>23G Combined Proc Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>23G Posterior Pack</fullName>
                </value>
                <value>
                    <fullName>23G Posterior Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>25G Combined Procedure Pack</fullName>
                </value>
                <value>
                    <fullName>25G Combined Proc Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>25G Posterior Pack</fullName>
                </value>
                <value>
                    <fullName>25G Posterior Pack w/AFI</fullName>
                </value>
                <value>
                    <fullName>Acrylic Hydrophobic 1pc Asp IO</fullName>
                </value>
                <value>
                    <fullName>Adapt AO</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>Amvisc</fullName>
                </value>
                <value>
                    <fullName>Amvisc Plus</fullName>
                </value>
                <value>
                    <fullName>Balanced Salt Solutions</fullName>
                </value>
                <value>
                    <fullName>Cataract Instruments</fullName>
                </value>
                <value>
                    <fullName>Clear + Brilliant</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>Crystalens HD500</fullName>
                </value>
                <value>
                    <fullName>Disposable Knives</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>INCISE</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters - EyeCee One MDJ265 single use injector</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters - Hydroport</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters - Microsert</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters - Mport</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters - Mport SI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sample Product</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Active</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Sample Product Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <recordTypes>
        <fullName>EMEA_SU_Sample_Product</fullName>
        <active>true</active>
        <description>Requested product sample, EMEA Surgical record type.</description>
        <label>EMEA SU Sample Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_SKU_Must_Be_Selected</fullName>
        <active>true</active>
        <description>Ensures a SKU has been chosen. Used by EMEA SU.</description>
        <errorConditionFormula>AND ( 
($Profile.Name &lt;&gt; &apos;BL: Integration User&apos;), 
AND ( 
ISNULL( TEXT( SKU__c ) ), ISNULL( Other_Non_Listed_Samples__c ) 
) 
)</errorConditionFormula>
        <errorMessage>You must either select a product to SKU level, or enter a non-listed product, in order to place a sample request!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Cannot_Be_Null</fullName>
        <active>true</active>
        <description>Ensure the product being requested has a quantity. Used by EMEA SU.</description>
        <errorConditionFormula>AND ( 
($Profile.Name &lt;&gt; &apos;BL: Integration User&apos; ) , 
ISNULL( Quantity_Requested__c ) 
)</errorConditionFormula>
        <errorMessage>You can&apos;t request product samples without specifying the quanitity required!</errorMessage>
    </validationRules>
</CustomObject>